--- a/Sinyoo.CrabyterDb/Sinyoo.CrabyterDb.ASPNetCoreSample/Views/Account/Login.cshtml
+++ b/Sinyoo.CrabyterDb/Sinyoo.CrabyterDb.ASPNetCoreSample/Views/Account/Login.cshtml
@@ -28,17 +28,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            <label asp-for="RememberMe">
-                                <input asp-for="RememberMe" />
-                                @Html.DisplayNameFor(m => m.RememberMe)
-                            </label>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <button type="submit" class="btn btn-default">Log in</button>
+                        <button type="submit" class="btn btn-default">登陆</button>
                     </div>
                 </div>
                 <p>
