Fixed the singleton bug

--- a/Sinyoo.CrabyterDb/Sinyoo.CrabyterDb.ASPNetCoreSample/Views/Shared/_LoginPartial.cshtml
+++ b/Sinyoo.CrabyterDb/Sinyoo.CrabyterDb.ASPNetCoreSample/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
 
 @inject ICrabyterDbServiceProvider CrabyterDbService
 
-@if (CrabyterDbService.User != null)
+@if (User.Identity.IsAuthenticated)
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
