--- a/Sinyoo.CrabyterDb/Sinyoo.CrabyterDb.ASPNetCoreSample/Views/Shared/_LoginPartial.cshtml
+++ b/Sinyoo.CrabyterDb/Sinyoo.CrabyterDb.ASPNetCoreSample/Views/Shared/_LoginPartial.cshtml
@@ -1,13 +1,12 @@
-﻿@using Sinyoo.CrabyterDb.ASPNetCoreSample.Services
+﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
-@inject ICrabyterDbServiceProvider CrabyterDbService
 
 @if (User.Identity.IsAuthenticated)
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a>Hello @CrabyterDbService.User.RealName</a>
+                <a>Hello @HttpContextAccessor.HttpContext.Request.Cookies[ConstantDefinitions.COOKIES_REAL_NAME]</a>
             </li>
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
